--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -4,7 +4,7 @@
 
 <h1>Login Form</h1>
 
-<form action='' method=POST>
+<form action='/login' method=POST>
     Enter your username: <input type='text' name='username'>
     Enter your password: <input type='text' name='password'>
 <input type='submit' value='Submit'>
