--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,4 +14,20 @@ button create/edit city rec page (only show if logged in) -->
 <input type="submit" value="Logout"'>
 </form>
 
+<form action='/register'>
+<input type="submit" value="Register"'>
+</form>
+
+<!-- name will be the city they type and then return the city options page -->
+<form action='/search_city/{{ city_name }}'>
+Search for recommendations by city! <input type='text' name= 'city_name'>
+<input type='submit'>
+</form>
+
+<!-- name will be the username they want to see city options for -->
+<form action='/search_user/<username>'>
+Search for recommendations by username! <input type='text' name= 'search_by_username'>
+<input type='submit'>
+</form>
+
 {% endblock %}
