working sql query code and backref

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,7 +20,7 @@ button create/edit city rec page (only show if logged in) -->
 
 <!-- name will be the city they type and then return the city options page -->
 <form action='/search_city/{{ city_name }}'>
-Search for recommendations by city! <input type='text' name= 'city_name'>
+Search for recommendations by city! <input type='text' name=city_name>
 <input type='submit'>
 </form>
 
