--- a/templates/username_search.html
+++ b/templates/username_search.html
@@ -3,12 +3,12 @@
 
   <h2>Usernames with recommendations for (VAR)</h2>
 
-  <ul>
-    {% for user in users %}
-      {% if user.rec.city.city_name == search_by_city %}
+  <ul>    
+    {% rec user in recs %}
+      <!-- {% if user.rec.city.city_name == search_by_city %} -->
         <li>
           <a href="/users/{{ user.username }}">?
-            {{ user.username }} ({{ TITLE TO ENTER FROM CREATE }})
+            {{ rec.user.username }} ({{ TITLE TO ENTER FROM CREATE }})
           </a>
         </li>
       {% endif %}
