successful search by city name

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@ button create/edit city rec page (only show if logged in) -->
 </form>
 
 <!-- name will be the city they type and then return the city options page -->
-<form action='/search_city/{{ city_name }}'>
+<form action='/search_city'>
 Search for recommendations by city! <input type='text' name=city_name>
 <input type='submit'>
 </form>
