--- a/templates/username_search.html
+++ b/templates/username_search.html
@@ -1,17 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h2>Usernames with recommendations for (VAR)</h2>
+  <h2>Usernames with recommendations for {{ city_name }}</h2>
 
   <ul>    
-    {% rec user in recs %}
-      <!-- {% if user.rec.city.city_name == search_by_city %} -->
+    {% for rec in recs %}
         <li>
-          <a href="/users/{{ user.username }}">?
-            {{ rec.user.username }} ({{ TITLE TO ENTER FROM CREATE }})
+            {{ rec.user.username }}
           </a>
         </li>
-      {% endif %}
     {% endfor %}
   </ul>
 
