working version before db change

--- a/templates/username_search.html
+++ b/templates/username_search.html
@@ -12,4 +12,9 @@
     {% endfor %}
   </ul>
 
+  <br>
+<form action='/'>
+    <input type="submit" value="Return Home!" />
+</form>
+
 {% endblock %}
