--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,6 +28,12 @@ Search for recommendations by city! <input type='text' name=city_name>
 <form action='/search_user/<username>'>
 Search for recommendations by username! <input type='text' name= 'search_by_username'>
 <input type='submit'>
+</form><br>
+
+<form action='/create_edit'>Would you like to create a new recommendation or edit an existing page?<br>
+    <input type='radio' name=create_edit value='create'>Create
+    <input type='radio' name=create_edit value='edit'>Edit
+    <input type='submit'>
 </form>
 
 {% endblock %}
