--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -10,4 +10,9 @@
 <input type='submit' value='Submit'>
 </form>
 
+<br>
+<form action='/'>
+    <input type="submit" value="Return Home!" />
+</form>
+
 {% endblock %}
