--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -14,5 +14,9 @@
     <input type=submit value='Submit'>
 </form>
 
+<br>
+<form action='/'>
+    <input type="submit" value="Return Home!" />
+</form>
 
 {% endblock %}
