working new db and create page

--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -3,7 +3,7 @@
 
 <h2>Create a new recommendation to share with others!</h2>
 
-<form action='/create_rec'>
+<form action='/create_new_rec' method="POST">
     
     <b>TITLE:</b><br>
     Please enter what you would like to call your review: <input type='text' name=rec_name><br><br>
