updated username search - removed duplicate view page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,8 +24,8 @@ Search for recommendations by city! <input type='text' name=city_name>
 </form>
 
 <!-- name will be the username they want to see city options for -->
-<form action='/search_user/<username>'>
-Search for recommendations by username! <input type='text' name= 'search_by_username'>
+<form action='/search_username'>
+Search for recommendations by username! <input type='text' name= 'username'>
 <input type='submit'>
 </form><br>
 
