--- a/templates/recommendation_edit.html
+++ b/templates/recommendation_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h2>Edit your recommendation below</h2>
 
-<form action='' method="POST">
+<form action='/' method="POST">
     
     <b>TITLE:</b><br>
     Please enter what you would like to call your review: <input type='text' name=rec_name><br><br>
