--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -4,15 +4,22 @@
 
 <h1>Login Form</h1>
 
-<form action='/login' method=POST>
+{% if session['username'] %}
+    You're already logged in!
+{% else %}
+    <form action='/login' method=POST>
     Enter your username: <input type='text' name='username'>
     Enter your password: <input type='text' name='password'>
-<input type='submit' value='Submit'>
-</form>
+    <input type='submit' value='Submit'>
+    </form>
+{% endif %}
 
-<br>
+<br><br>
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
 
 {% endblock %}
+
+
+
