--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -3,6 +3,7 @@
 
 
 <h2>{{recommendation.rec_name}}</h2>
+created by {{ recommendation.user.username }}<br><br>
 
 <h3>{{recommendation.city.city_name}}</h3>
 
