--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,13 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="/static/project.css" rel="stylesheet">
   <title>Recommendations</title>
 </head>
 
 <body>
+    <div class="container">
   Recommendations Title Add Here
   <hr>
 
@@ -16,6 +19,9 @@
   </ul>
 
   {% block content %} put your content here {% endblock %}
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</div>
 </body>
 </html>
