fixed case sensitive user/city search, working mvp, surfaced db info in edit fields for edits

--- a/templates/recommendation_edit.html
+++ b/templates/recommendation_edit.html
@@ -6,23 +6,23 @@
 <form action='/recommendations/{{ recommendation.rec_id }}' method="POST">
    
     <b>TITLE:</b><br>
-    Please edit what you would like to call your review: <input type='text' name=rec_name><br><br>
+    Please edit what you would like to call your review: <input type='text' name=rec_name value="{{ recommendation.rec_name }}"><br><br>
 
     <b>CITY:</b><br>
     Please enter the city you will review: {{ recommendation.city.city_name }}<br>
-    Add an explanation on what you loved about the city: <input type='text' name=city_info><br><br>
+    Add an explanation on what you loved about the city: <input type='text' name=city_info value="{{ recommendation.city.city_info }}"><br><br>
 
     <b>STAY:</b><br>
-    Where did you stay: <input type='text' name=stay_name><br>
-    Add information about your stay: <input type='text' name=stay_info><br><br>
+    Where did you stay: <input type='text' name=stay_name value="{{ recommendation.stay_name }}"><br>
+    Add information about your stay: <input type='text' name=stay_info value="{{ recommendation.stay_info }}"><br><br>
 
     <b>EAT:</b><br>
-    Where must you eat when visiting: <input type='text' name=eat_name><br>
-    Add information about those restaurants: <input type='text' name=eat_info><br><br>
+    Where must you eat when visiting: <input type='text' name=eat_name value="{{ recommendation.eat_name }}"><br>
+    Add information about those restaurants: <input type='text' name=eat_info value="{{ recommendation.eat_info }}"><br><br>
 
     <b>DO:</b><br>
-    What activities do you recommend: <input type='text' name=do_name><br>
-    Why did you love doing them: <input type='text' name=do_info><br><br>
+    What activities do you recommend: <input type='text' name=do_name value="{{ recommendation.do_name }}"><br>
+    Why did you love doing them: <input type='text' name=do_info value="{{ recommendation.do_info }}"><br><br>
 
 <input type='submit'>
 </form>
