updated text areas

--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -5,24 +5,24 @@
 
 <form action='/create_new_rec' method="POST">
     
-    <b>TITLE:</b><br>
-    Please enter what you would like to call your review: <input type='text' name=rec_name><br><br>
+    </b><br>
+    Please enter what you would like to call your review: <textarea name=rec_name rows='1' cols='80'></textarea><br><br>
 
     <b>CITY:</b><br>
-    Please enter the city you will review: <input type='text' name=city_name><br>
-    Add an explanation on what you loved about the city: <input type='text' name=city_info><br><br>
+    Please enter the city you will review: <textarea name=city_name rows='1' cols='80'></textarea><br>
+    Add an explanation on what you loved about the city: <textarea name=city_info rows='1' cols='80'></textarea><br><br>
 
     <b>STAY:</b><br>
-    Where did you stay: <input type='text' name=stay_name><br>
-    Add information about your stay: <input type='text' name=stay_info><br><br>
+    Where did you stay: <textarea name=stay_name rows='1' cols='80'></textarea><br>
+    Add information about your stay: <textarea name=stay_info rows='1' cols='80'></textarea><br><br>
 
     <b>EAT:</b><br>
-    Where must you eat when visiting: <input type='text' name=eat_name><br>
-    Add information about those restaurants: <input type='text' name=eat_info><br><br>
+    Where must you eat when visiting: <textarea name=eat_name rows='1' cols='80'></textarea><br>
+    Add information about those restaurants: <textarea name=eat_info rows='1' cols='80'></textarea><br><br>
 
     <b>DO:</b><br>
-    What activities do you recommend: <input type='text' name=do_name><br>
-    Why did you love doing them: <input type='text' name=do_info><br><br>
+    What activities do you recommend: <textarea name=do_name rows='1' cols='80'></textarea><br>
+    Why did you love doing them: <textarea name=do_info rows='1' cols='80'></textarea><br><br>
 
 <input type='submit'>
 </form>
