updated w/ capitalization in Jinja

--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -5,7 +5,7 @@
 <h2>{{recommendation.rec_name}}</h2>
 created by {{ recommendation.user.username }}<br><br>
 
-<h3>{{recommendation.city.city_name}}</h3>
+<h3>{{recommendation.city.city_name | title}}</h3>
 
 <div>{{recommendation.city.city_info}}</div><br>
 
