--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="/static/project.css" rel="stylesheet">
+    <!-- <link href="/static/project.css" rel="stylesheet"> -->
+    {% block head %} {% endblock %}
   <title>Recommendations</title>
 </head>
 
