--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -9,7 +9,7 @@
 {% else %}
     <form action='/login' method=POST>
     Enter your username: <input type='text' name='username'>
-    Enter your password: <input type='text' name='password'>
+    Enter your password: <input type='password' name='password' placeholder="Password">
     <input type='submit' value='Submit'>
     </form>
 {% endif %}
