--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -43,6 +43,8 @@ created by {{ recommendation.user.username }}<br><br>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.city.city_info}}</pre></div><br>
 
+<div><img src='{{ "../"+recommendation.img_url }}'></div><br>
+
 STAY
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_name}}</pre></div>
 
