working gmap on multi word city

--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -72,7 +72,7 @@ DO
 
 
 <div>
-    <input id="address" type='hidden' value={{recommendation.city.city_name}}>
+    <input id="address" type='hidden' value='{{recommendation.city.city_name}}'>
 </div>
 
 <div id="map"></div>
