--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -10,21 +10,21 @@
 
     <b>CITY:</b><br>
     Please enter the city you will review: <textarea name=city_name rows='1' cols='80'></textarea><br>
-    Add an explanation on what you loved about the city: <textarea name=city_info rows='1' cols='80'></textarea><br><br>
+    Add an explanation on what you loved about the city: <textarea class='form-control' rows='3' name=city_info cols='80'></textarea><br><br>
 
     <b>STAY:</b><br>
     Where did you stay: <textarea name=stay_name rows='1' cols='80'></textarea><br>
-    Add information about your stay: <textarea name=stay_info rows='1' cols='80'></textarea><br><br>
+    Add information about your stay: <textarea name=stay_info class='form-control' rows='3' cols='80'></textarea><br><br>
 
     <b>EAT:</b><br>
     Where must you eat when visiting: <textarea name=eat_name rows='1' cols='80'></textarea><br>
-    Add information about those restaurants: <textarea name=eat_info rows='1' cols='80'></textarea><br><br>
+    Add information about those restaurants: <textarea name=eat_info class='form-control' rows='3' cols='80'></textarea><br><br>
 
     <b>DO:</b><br>
-    What activities do you recommend: <textarea name=do_name rows='1' cols='80'></textarea><br>
-    Why did you love doing them: <textarea name=do_info rows='1' cols='80'></textarea><br><br>
+    What activities do you recommend doing/avoiding: <textarea name=do_name rows='1' cols='80'></textarea><br>
+    Why do/don't do those activities: <textarea name=do_info class='form-control' rows='3' cols='80'></textarea><br><br>
 
-    <b>Upload recommendation image!</b><br><p><input type=file name=file>
+    <b>Upload an image for your city recommendation!</b><br><p><input type=file name=file>
 
 <input type='submit'>
 </form>
