--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -43,7 +43,7 @@ created by {{ recommendation.user.username }}<br><br>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.city.city_info}}</pre></div><br>
 
-<div><img src='{{ "../"+recommendation.img_url }}'></div><br>
+<img src='{{ "../"+recommendation.img_url }}' class="img-thumbnail" alt="Cinque Terre" width="420" height="290"><br><br>
 
 STAY
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_name}}</pre></div>
