--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -8,8 +8,8 @@
     You're already logged in!
 {% else %}
     <form action='/login' method=POST>
-    Enter your username: <input type='text' name='username'>
-    Enter your password: <input type='password' name='password' placeholder="Password">
+    Username: <input type='text' class='form-control' id='username' placeholder='Enter username' name='username'><br>
+    Password: <input type='password' class='form-control' name='password' placeholder="Enter Password"><br>
     <input type='submit' value='Submit'>
     </form>
 {% endif %}
