--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -4,14 +4,14 @@
 <H1>Registration Form</H1>
 
 <form action='/register' method=POST>
-    Please enter the following information to create a profile!
+    Please enter the following information to create a profile!<br><br>
 
-    Username: <input type='text' name='username'><br>
-    Password: <input type='text' name='password'><br>
-    First name: <input type='text' name='fname'><br>
-    Last name: <input type='text' name='lname'><br>
-    Email: <input type='text' name='email'><br>
-    <input type=submit value='Submit'>
+    <div>Username: <input type='text' class='form-control' placeholder='Enter a username' name='username'><br>
+    Password: <input type='text' class='form-control' placeholder='Enter a password' name='password'><br>
+    First name: <input type='text' class='form-control' placeholder='Enter your first name' name='fname'><br>
+    Last name: <input type='text' class='form-control' placeholder='Enter your last name' name='lname'><br>
+    Email: <input type='email' class='form-control' placeholder='Enter your email' name='email'><br>
+    <input type=submit value='Submit'></div>
 </form>
 
 <br>
