--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -24,7 +24,7 @@
     What activities do you recommend doing/avoiding: <textarea name=do_name rows='1' cols='80'></textarea><br>
     Why do/don't do those activities: <textarea name=do_info class='form-control' rows='3' cols='80'></textarea><br><br>
 
-    <b>Upload an image for your city recommendation!</b><br><p><input type=file name=file>
+    <div><b>Upload images for your city recommendation!</b><br><p><input type=file name=file><input type=file name=file2><input type=file name=file3><input type=file name=file4></div>
 
 <input type='submit'>
 </form>
