working img carousel

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!-- <link href="/static/project.css" rel="stylesheet"> -->
-    {% block head %} {% endblock %}
+    <link rel="stylesheet" href="/static/style.css">
+
   <title>Recommendations</title>
 </head>
 
