--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 
+<!-- <video autoplay muted loop id="myVideo">
+  <source src="static/26278748-preview.mp4" type="26278748-preview.mp4">
+</video> -->
+
 <!-- button create/edit city rec page (only show if logged in) -->
 {% if session['username'] %}
 {% else %}
