--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -43,10 +43,35 @@ created by {{ recommendation.user.username }}<br><br>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.city.city_info}}</pre></div><br>
 
-<img src='{{ "../"+recommendation.img_url }}' class="img-thumbnail" width="420" height="290"><br><br>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url }}' alt="First photo">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url2 }}' alt="Second photo">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url3 }}' alt="Third photo">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url4 }}' alt="fourth photo">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- <img src='{{ "../"+recommendation.img_url }}' class="img-thumbnail" width="420" height="290"><br><br>
 <img src='{{ "../"+recommendation.img_url2 }}' class="img-thumbnail" width="420" height="290"><br><br>
 <img src='{{ "../"+recommendation.img_url3 }}' class="img-thumbnail" width="420" height="290"><br><br>
-<img src='{{ "../"+recommendation.img_url4 }}' class="img-thumbnail" width="420" height="290"><br><br>
+<img src='{{ "../"+recommendation.img_url4 }}' class="img-thumbnail" width="420" height="290"><br><br> -->
 
 STAY
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_name}}</pre></div>
