--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 
   <title>Recommendations</title>
 </head>
 
 <body>
-    <div class="container">
-  <h1>Recommendations!</h1>
+
   <hr>
 
   <ul>
