--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -7,7 +7,6 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 400px;
         width: 600px;
       }
       /* Optional: Makes the sample page fill the window. */
@@ -37,54 +36,58 @@
 
 
 <h2>{{recommendation.rec_name | title}}</h2>
-created by {{ recommendation.user.username }}<br><br>
+<div class="center_text">created by {{ recommendation.user.username }}<br><br></div>
 
-<div>{{recommendation.city.city_name | title}}</div>
+<h3>{{recommendation.city.city_name | title}}</h3>
 
-<div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.city.city_info}}</pre></div><br>
+<div class="center_text"><div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.city.city_info}}</pre></div><br></div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src='{{ "../"+recommendation.img_url }}' alt="First photo">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url }}' alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src='{{ "../"+recommendation.img_url2 }}' alt="Second photo">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url2 }}' alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src='{{ "../"+recommendation.img_url3 }}' alt="Third photo">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url3 }}' alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src='{{ "../"+recommendation.img_url4 }}' alt="fourth photo">
+      <img class="d-block w-100" src='{{ "../"+recommendation.img_url4 }}' alt="fourth slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
 
-<!-- <img src='{{ "../"+recommendation.img_url }}' class="img-thumbnail" width="420" height="290"><br><br>
-<img src='{{ "../"+recommendation.img_url2 }}' class="img-thumbnail" width="420" height="290"><br><br>
-<img src='{{ "../"+recommendation.img_url3 }}' class="img-thumbnail" width="420" height="290"><br><br>
-<img src='{{ "../"+recommendation.img_url4 }}' class="img-thumbnail" width="420" height="290"><br><br> -->
-
-STAY
-<div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_name}}</pre></div>
+<div class="rec_view">
+<h4>STAY:</h4>
+<div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_name}}</pre></h4>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.stay_info}}</pre></div><br>
-EAT
+<h4>EAT:</h4>
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.eat_name}}</pre></div>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.eat_info}}</pre></div><br>
-DO
+<h4>DO:</h4>
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.do_name}}</pre></div>
 
 <div><pre  style="white-space: pre-wrap; word-break: keep-all;">{{recommendation.do_info}}</pre></div><br>
+</div>
 
 
 {% if session['username'] == recommendation.user.username %}
@@ -118,10 +121,6 @@ DO
         geocodeAddress(geocoder, map);
     });
     }
-
-    // document.getElementById('submit').addEventListener('click', function() {
-    //     geocodeAddress(geocoder, map);
-    // });
     
 
     function geocodeAddress(geocoder, resultsMap) {
