--- a/templates/city_search.html
+++ b/templates/city_search.html
@@ -17,8 +17,10 @@
 <!-- </div> -->
 
   <br>
+<div class="c_home">
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
+</div>
 
 {% endblock %}
