--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -37,8 +37,10 @@
 
   
 <br>
+<div class="home">
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
+</div>
 
 {% endblock %}
