--- a/templates/recommendation_edit.html
+++ b/templates/recommendation_edit.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h2>Edit your recommendation below</h2>
-
+<div class="edit-form">
 <form action='/recommendations/{{ recommendation.rec_id }}' method="POST">
    
     <b>TITLE:</b><br>
@@ -10,25 +10,29 @@
 
     <b>CITY:</b><br>
     Please enter the city you will review: {{ recommendation.city.city_name }} <br>
-    Add an explanation on what you loved about the city: <textarea name=city_info rows='1' cols='80'>{{ recommendation.city.city_info }}</textarea><br><br>
+    Add an explanation on what you loved about the city: <textarea name=city_info rows='3' cols='80'>{{ recommendation.city.city_info }}</textarea><br><br>
 
     <b>STAY:</b><br>
     Where did you stay: <textarea name=stay_name rows='1' cols='80'>{{ recommendation.stay_name }}</textarea><br>
-    Add information about your stay: <textarea name=stay_info rows='1' cols='80'>{{ recommendation.stay_info }}</textarea><br><br>
+    Add information about your stay: <textarea name=stay_info rows='3' cols='80'>{{ recommendation.stay_info }}</textarea><br><br>
 
     <b>EAT:</b><br>
     Where must you eat when visiting: <textarea name=eat_name rows='1' cols='80'>{{ recommendation.eat_name }}</textarea><br>
-    Add information about those restaurants: <textarea name=eat_info rows='1' cols='80'>{{ recommendation.eat_info }}</textarea><br><br>
+    Add information about those restaurants: <textarea name=eat_info rows='3' cols='80'>{{ recommendation.eat_info }}</textarea><br><br>
 
     <b>DO:</b><br>
     What activities do you recommend: <textarea name=do_name rows='1' cols='80'>{{ recommendation.do_name }}</textarea><br>
-    Why did you love doing them: <textarea name=do_info rows='1' cols='80'>{{ recommendation.do_info }}</textarea><br><br>
+    Why did you love doing them: <textarea name=do_info rows='3' cols='80'>{{ recommendation.do_info }}</textarea><br><br>
 
 <input type='submit'>
 </form>
+</div>
+
 <br>
+<div class="home">
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
+</div>
 
 {% endblock %}
