--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<h2>Login Form</h2>
+<h1>Login Form</h1>
 
 {% if session['username'] %}
     You're already logged in!
@@ -18,9 +18,11 @@
 {% endif %}
 
 <br><br>
+<div class="c_home">
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
+</div>
 
 {% endblock %}
 
