--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -55,7 +55,7 @@ Search for recommendations by city! <input type='text' name=city_name>
     </form><br>
 
     <form action='/recommendations/edit'>
-    <input type="submit" value="View/Edit Exisiting Recommendations"'>
+    <input type="submit" value="View/Edit My Exisiting Recommendations"'>
     </form><br>
 
     <form action='/logout'>
