--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -142,9 +142,10 @@
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTRFajLEyrXBcHz1cDXNGRZTabmDC1Ccw&callback=initMap">
 </script><br>
 
-
+<div class="c_home">
 <form action='/'>
     <input type="submit" value="Return Home!" />
 </form>
+</div>
 
  {% endblock %}
