completed project w/ minor edits

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,11 +23,12 @@
 {% if session['username'] %}
 {% else %}
   <!-- <div id="btn-container" class="btn-group"> -->
-  <div class="button-box col-lg-12">
+  <div id="btn 1" class="button-box col-lg-12">
 
     <form action='/login'><button type="submit" class="btn btn-primary">Login</button>
     </form>
-
+</div>
+<div id="btn 2" class="button-box col-lg-12">
     <form action='/register'><button type="submit" class="btn btn-primary">Register</button>
     </form>
   </div>
@@ -39,8 +40,9 @@
 Search for recommendations by city! <input type='text' name=city_name>
   <input type='submit'>
   </form>
-
+</div>
 <!-- name will be the username they want to see city options for -->
+<div class="search2">
   <form action='/search_username'>
   Search for recommendations by username! <input type='text' name= 'username'>
   <input type='submit'>
