--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,12 @@ pre {
   text-align: center;
 }
 
+.search2 {
+  text-align: center;
+  margin-top:10px;
+  margin-bottom:40px;
+  }
+
 .user_options {
   text-align: center;
   margin-bottom:40px;
